# darkspore_server

./: .gitignore  CMakeLists.txt  build.sh  cmake_run.sh  darkspore_server.vcxproj  darkspore_server.vcxproj.filters  docker-compose.yml  docker_run.sh  prepare.sh  prepare_docker.sh  run.sh  run_docker.sh
docker/: Dockerfile  DockerfileOpenssl  install-openssl.sh
libs/raknet-3.902-mod/: CMakeLists.txt
libs/raknet-3.902-mod/Lib/DLL/: CMakeLists.txt
libs/raknet-3.902-mod/Lib/LibStatic/: CMakeLists.txt
libs/rapidjson-1.1.0/: CMakeLists.txt
source/: main.cpp
source/blaze/: client.cpp  client.h  tdf.cpp
source/blaze/component/: associationcomponent.cpp  authcomponent.cpp  gamemanagercomponent.cpp  messagingcomponent.cpp  playgroupscomponent.cpp  redirectorcomponent.cpp  roomscomponent.cpp  usersessioncomponent.cpp  utilcomponent.cpp
source/game/: ability.cpp  ability.h  api.cpp  creature.cpp  creature.h  player.h  squad.cpp  squad.h  template.cpp  template.h  user.cpp  user.h  userpart.h
source/raknet/: server.cpp  types.h
source/repository/: ability.cpp  ability.h  user.cpp  user.h
source/utils/: functions.h
